# Who-am-AI

./: .gitignore  docker-compose.yaml  pyproject.toml
app/: asgi.py  celery.py  settings.py  urls.py
core/: agent.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_gamesession_user.py  0003_gamesession_attempts_left.py
core/utils/: llm_prompts.py
core/utils/models/: google_ai.py
frontend/: urls.py  views.py
frontend/static/css/: base.css  game.css  login.css  signup.css
frontend/static/js/: game.js  login.js  signup.js
frontend/templates/: index.html
frontend/templates/frontend/: game.html  login.html  signup.html
